--- a/portfolio/src/components/App/style/App.css
+++ b/portfolio/src/components/App/style/App.css
@@ -39,7 +39,7 @@
 
 .background-view {
   display: flex;
-  background-image: url("Images/card_background.jpg");
+  background-image: url("../../../Images/card_background.jpg");
   background-size: contain;
   height: 200px;
   width: 350px;
